--- a/MarketWizard/MarketWizard/MarketWizard.csproj
+++ b/MarketWizard/MarketWizard/MarketWizard.csproj
@@ -86,6 +86,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Utilities\ExcelRowBinder.cs" />
+    <Compile Include="Utilities\StatusTracker.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
