--- a/MarketWizard/MarketWizard/MarketWizard.csproj
+++ b/MarketWizard/MarketWizard/MarketWizard.csproj
@@ -88,9 +88,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Objects\MessageObject.cs" />
     <Compile Include="Utilities\ExcelRowBinder.cs" />
     <Compile Include="Utilities\StatusTracker.cs" />
-    <Page Include="MainWindow.xaml">
+    <Page Include="Windows\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -98,19 +99,19 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="EmailObject.cs" />
-    <Compile Include="ExcelObject.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Objects\EmailObject.cs" />
+    <Compile Include="Objects\ExcelObject.cs" />
+    <Compile Include="Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="PreviewWindow.xaml">
+    <Page Include="Windows\PreviewWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PreviewWindow.xaml.cs">
+    <Compile Include="Windows\PreviewWindow.xaml.cs">
       <DependentUpon>PreviewWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
