--- a/MarketWizard/MarketWizard/MarketWizard.csproj
+++ b/MarketWizard/MarketWizard/MarketWizard.csproj
@@ -88,9 +88,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Objects\LoginObject.cs" />
     <Compile Include="Objects\MessageObject.cs" />
+    <Compile Include="Objects\SMTPObject.cs" />
     <Compile Include="Utilities\ExcelRowBinder.cs" />
     <Compile Include="Utilities\StatusTracker.cs" />
+    <Page Include="Windows\LoginWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -101,6 +107,9 @@
     </Compile>
     <Compile Include="Objects\EmailObject.cs" />
     <Compile Include="Objects\ExcelObject.cs" />
+    <Compile Include="Windows\LoginWindow.xaml.cs">
+      <DependentUpon>LoginWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
